# comdb2

./: .gitignore  CMakeLists.txt  Makefile  NOTES  main.mk  test.c
bb/: averager.c  mem_codegen.sh  sbuf2.c  thdpool.c
bbinc/: averager.h  cdb2_constants.h  comdb2_ruleset.h  endian_core.h  perf.h  thdpool.h  tunables.h
bdb/: CMakeLists.txt  add.c  attr.c  attr.h  bdb.c  bdb_access.c  bdb_access.h  bdb_api.h  bdb_blkseq.c  bdb_cursor.h  bdb_fetch.h  bdb_int.h  bdb_llops.c  bdb_net.c  bdb_net.h  bdb_osqlbkfill.c  bdb_osqlbkfill.h  bdb_osqlcur.c  bdb_osqlcur.h  bdb_osqllog.c  bdb_queuedb.h  bdb_systable.c  bdb_systable.h  build_recfiles.sh  callback.c  cursor.c  cursor_ll.c  custom_recover.c  fetch.c  file.c  fstdump.c  info.c  llmeta.c  llog.src  llog_handlers.h  locks.c  locktest.c  odh.c  queue.c  queuedb.c  (+7 more)
berkdb/: CMakeLists.txt
berkdb/btree/: bt_prefix.c  bt_search.c
berkdb/db/: db_iface.c  db_method.c  db_pgdump.c  db_rec.c
berkdb/dbinc/: db_am.h  db_attr.h
berkdb/dbreg/: dbreg_util.c
berkdb/env/: env_attr.c  env_recover.c
berkdb/log/: log_put.c
berkdb/mp/: mp_fget.c  mp_sync.c
berkdb/os/: os_rw.c
berkdb/qam/: qam_rec.c
berkdb/rep/: rep_lc_cache.c  rep_method.c  rep_record.c
berkdb/txn/: txn.c  txn_auto.c  txn_recover.c
cdb2api/: cdb2api.c  cdb2api.h  cdb2api_hndl.h  cdb2api_int.h
cmake/: FindLibEvent.cmake
contrib/comdb2admin/: comdb2admin
contrib/dev-util/: Makefile  cases.csc2  cluster  testrunner.c  versions.csc2
csc2/: dynschemaload.h  macc_so.c  macclex.l  maccparse.y
datetime/: localtimedb.c
db/: CMakeLists.txt  api_history.c  api_history.h  autoanalyze.c  block_internal.c  block_internal.h  bpfunc.c  bpfunc.h  comdb2.c  comdb2.h  comdb2_ruleset.c  config.c  constraints.c  cron.c  db_access.c  db_fingerprint.c  db_metrics.c  db_query_plan.c  db_tunables.c  db_tunables.h  dbqueue.c  disttxn.c  dohast.c  dohsql.c  eventlog.c  eventlog.h  fdb_bend.c  fdb_bend_sql.c  fdb_boots.c  fdb_fend.c  fdb_fend.h  fdb_fend_cache.c  fdb_push.c  glue.c  handle_buf.c  indices.c  indices.h  legacy.c  lrucache.c  lrucache.h  (+53 more)
distro/arch/: PKGBUILD  install
distro/rpmbuild/: comdb2.spec
eventlog/: eventlog.c  eventlog.h
lua/: ldblib.c  ltypes.c  luautil.c  sp.c  sp_int.h  syssp.c.in
mem/: mem.c
net/: CMakeLists.txt  net.c  net.h  net_evbuffer.c  net_int.h  readynotify.c  readynotify.h  sqlwriter.c  sqlwriter.h  testnet.c
plugins/: CMakeLists.txt
plugins/dbqueuedb/: dbqueuedb.c  plugin.h.in
plugins/newsql/: newsql.c  newsql.h  newsql_evbuffer.c  newsql_sbuf.c
plugins/remsql/: fdb_comm.c
plugins/simpleauth/: simpleauth.c  simplecheck.c
plugins/sockbplog/: sockbplog.c
protobuf/: bpfunc.proto  sqlquery.proto  sqlresponse.proto
schemachange/: sc_add_table.c  sc_alter_table.c  sc_callbacks.c  sc_fastinit_table.c  sc_global.c  sc_import.c  sc_logic.c  sc_logic.h  sc_lua.c  sc_queues.c  sc_records.c  sc_schema.c  sc_struct.c  schemachange.c  schemachange.h
sqlite/: CMakeLists.txt  build.c  callback.c  comdb2build.c  complete.c  ctime.c  definitions.cmake  expr.c  func.c  hash.c  hash.h  mkkeywordhash.c  parse.y  prepare.c  sqlite3.h  sqliteInt.h  tokenize.c  vdbeInt.h  vdbeapi.c  vdbeaux.c  wherecode.c  whereexpr.c
sqlite/src/: analyze.c  attach.c  btree.c  btree.h  build.c  comdb2build.c  comdb2lua.c  expr.c  func.c  main.c  parse.y  sqlite3.h  sqliteInt.h  sqliteLimit.h  sqlite_btree.h  tokenize.c  vdbe.c  vdbe.h  vdbeInt.h  vdbeaux.c  where.c
sqlite/tool/: mkkeywordhash.c
testparse/: .gitignore  Makefile  csc2parser.h  csctypes.h  lempar.c  lex.c  parse.y  test.c  test.csc2
tests/: Makefile  Makefile.common  quarantine.csv  runtestcase  setup  testcase.mk  testutils  valgrind.supp
tests/api_tst.test/: runit
tests/auth.test/: t09.expected
tests/basic.test/: Makefile
tests/bind_query_plan.test/: runit
tests/blockaccess.test/: Makefile  expected  lrl  runit  t.csc2
tests/bulkimport.test/: runit
tests/cdb2sql.test/: t00.expected
tests/comdb2_snapshot_lsn.test/: runit
tests/comdb2sys.test/: comdb2sys.expected
tests/consumer.test/: runit  t11.sh
tests/consumer_blob_deadlock.test/: runit
tests/destroy_sql_pool_overflow.test/: runit
tests/docker/: Dockerfile.install  makedb  runit
tests/fdb_compare.test/: lrl.options
tests/fdb_push.test/: lrl.options  test_fdb_push.sh
tests/incoherent_startup.test/: runit
tests/instant_sc.test/: t21.req.expected  t21.req.tool  tagchange.sh
tests/ioerror_remsql.test/: lrl.options
tests/ixflags_overflow.test/: README  crash256.csc2  runit  t50.csc2  t51.csc2
tests/load_remsql.test/: lrl.options
tests/longreq_sanity.test/: runit
tests/lua_fdb_func.test/: Makefile  lrl.options  runit
tests/mismatch_class_remsql.test/: lrl.options  remsql.sh
tests/misstable_remsql.test/: lrl.options
tests/part_setval.test/: README  runit
tests/phys_rep_tiered.test/: runit
tests/queue_recno_wrap.test/: Makefile  lrl.options  runit
tests/remsql.test/: lrl.options
tests/remsql_locks.test/: lrl.options
tests/remsqltimeout.test/: lrl.options
tests/remtran_origin.test/: lrl.options
tests/rename_populate.test/: expected.txt  runit
tests/ruleset.test/: ruleset.sh
tests/sc_addcolumn_remsql.test/: lrl.options
tests/sc_remsql.test/: lrl.options
tests/sc_setrunning_race.test/: lrl.options  runit  t.csc2  t2.csc2
tests/seqno_ix_delete.test/: Makefile  README  lrl.options  runit
tests/simpleauth.test/: lrl.options  runit
tests/simpleauth_password.test/: lrl.options
tests/slowconnect.test/: Makefile  mikedb.cfg  runit
tests/smoketest/: Dockerfile.arch.build  Makefile
tests/sockpool_remsql.test/: lrl.options
tests/tools/: CMakeLists.txt  cdb2api_enforce_timeout.cpp  cdb2api_sptrace.cpp  cdb2api_stmt_return_types.cpp  cdb2api_unit.c  cdb2bind.c  crle.c  debug_queueops.c  endian_core.c  gen_all_blockops.c  simpleauth_test.cpp  slowconnect.c  tagged_bounds.c
util/: bb_asprintf.c  debug_switches.c  import_util.c  locks_wrap.h  pool.c  portmuxusr.c  rtcpu.c  ssl_glue.c  switches.c  sys_wrap.h  thdpool.c  time_accounting.h  unlikely.h  walkback.c
(+97 files in other folders)
